--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,6 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-
 }
 
 .Shelf {
@@ -39,6 +38,28 @@
 
 .Box{
   background-color:  #E76868;
-  width: 250px;
-  height: 200px
+  height: 100px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.BoxSpace {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+.Lemon {
+    border-radius: 50%;
+    background-color: yellow;
+}
+
+.Orange {
+    border-radius: 50%;
+    background-color: orange;
+}
+
+.Kiwi {
+    border-radius: 50%;
+    background-color: green;
 }
