--- a/src/App.css
+++ b/src/App.css
@@ -52,14 +52,20 @@
 .Lemon {
     border-radius: 50%;
     background-color: yellow;
+    width: 50px;
+    height: 50px;
 }
 
 .Orange {
     border-radius: 50%;
     background-color: orange;
+    width: 50px;
+    height: 50px;
 }
 
 .Kiwi {
     border-radius: 50%;
     background-color: green;
+    width: 50px;
+    height: 50px;
 }
